<resources>
    <string name="app_name">Firebase on Android</string>
    <string name="firebase_auth">Firebase Auth</string>
    <string name="hello">Hello!</string>
    <string name="user_name">User Name</string>
    <string name="user_id">User ID</string>
    <string name="sign_in_anonymously">Sign In Anonymously</string>
    <string name="sign_in_to_see_this">Sign In to Get Started</string>
    <string name="this_is_an_anonymous_account">This Is An Anonymous Account</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
</resources>